--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,27 @@
 # Site settings
 title: Jekyll-materialize
 description: > # this means to ignore newlines until "baseurl:"
-    Write an awesome description for your new site here. You can edit this
-    line in _config.yml. It will appear in your document head meta (for
-    Google search results) and in your feed.xml site description.
-url: "http://yourdomain.com"
-baseurl: "/jekyll-materialize"
-logo: jekyll-<b>materialize</b>
-paginate: 5
+   Test material design. Jekyll + materialize.css
+   
+url: "https://ybarz.github.io"
+baseurl: "/mat"
+logo: <b>myz<b>
+paginate: 3
 paginate_path: "/page:num/"
 owner:
-    email: ichihara.rifa@gmail.com
+    email: marcoeybarz@gmail.com
     facebook:
-        show: true
+        show: false
         name: "Ichihara Rifa"
         url: "https://fb.me/nasya.aidan"
     github:
-        show: true
+        show: false
         username: "riefachan"
     twitter:
         show: false
         username: ""
     disqus:
-        show: true
+        show: false
         username: "ichihararifa"
 sass:
     sass_dir: _sass
